# NURBS

./: CMakeLists.txt  README.md
examples/: evaluate_curve.cpp
include/nurbs/: Nurbs.hpp
include/nurbs/basis/: Basis.hpp
include/nurbs/core/: KnotVector.hpp  Types.hpp
include/nurbs/geometry/: NurbsCurve.hpp
src/basis/: Basis.cpp
src/core/: KnotVector.cpp
src/geometry/: NurbsCurve.cpp
tests/: test_nurbs.cpp
